--- a/about.html
+++ b/about.html
@@ -87,7 +87,7 @@
 							</li>
 
 							<li>
-								<a href="blog.html">Blog</a>
+								<a href="http://alzerinablog.com">Blog</a>
 							</li>
 
 							<li class="active-menu">
@@ -197,7 +197,7 @@
 				</li>
 
 				<li>
-					<a href="blog.html">Blog</a>
+					<a href="http://alzerinablog.com">Blog</a>
 				</li>
 
 				<li>
