--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 							</li>
 
 							<li>
-								<a href="blog.html">Blog</a>
+								<a href="http://alzerinablog.com">Blog</a>
 							</li>
 
 							<li>
@@ -143,7 +143,7 @@
 				</li>
 
 				<li>
-					<a href="blog.html">Blog</a>
+					<a href="http://alzerinablog.com">Blog</a>
 				</li>
 
 				<li>
