--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 							</li>
 
 							<li>
-								<a href="about.html">About</a>
+								<a href="https://www.alzerina.com/pages/alzerinas-mission">About</a>
 							</li>
 
 							<li>
@@ -147,7 +147,7 @@
 				</li>
 
 				<li>
-					<a href="about.html">About</a>
+					<a href="https://www.alzerina.com/pages/alzerinas-mission">About</a>
 				</li>
 
 				<li>
