--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 							</li>
 
 							<li>
-								<a href="contact.html">Contact</a>
+								<a href="https://www.alzerina.com/pages/contact">Contact</a>
 							</li>
 						</ul>
 					</div>
@@ -151,7 +151,7 @@
 				</li>
 
 				<li>
-					<a href="contact.html">Contact</a>
+					<a href="https://www.alzerina.com/pages/contact">Contact</a>
 				</li>
 			</ul>
 		</div>
