--- a/index.html
+++ b/index.html
@@ -39,6 +39,11 @@
 
 	<!-- Header -->
 	<header class="header-v3">
+		<div class="logo-container">
+		<a href="#" class="logo1">
+			<img src="images/icons/logo-01.png" alt="IMG-LOGO">
+		</a>
+	</div>
 		<!-- Header desktop -->
 		<div class="container-menu-desktop trans-03">
 			<div class="wrap-menu-desktop">
@@ -48,7 +53,6 @@
 					<a href="#" class="logo">
 						<img src="images/icons/logo-01.png" alt="IMG-LOGO">
 					</a>
-
 					<!-- Menu desktop -->
 					<div class="menu-desktop">
 						<ul class="main-menu">
@@ -60,7 +64,7 @@
 								<a href="https://www.alzerina.com">Shop</a>
 							</li>
 
-							<li class="label1" data-label1="hot">
+							<li>
 								<a href="shoping-cart.html">Features</a>
 							</li>
 
@@ -170,133 +174,134 @@
 				</div>
 			</form>
 		</div>
+		<aside class="wrap-sidebar js-sidebar">
+			<div class="s-full js-hide-sidebar"></div>
+
+			<div class="sidebar flex-col-l p-t-22 p-b-25">
+				<div class="flex-r w-full p-b-30 p-r-27">
+					<div class="fs-35 lh-10 cl2 p-lr-5 pointer hov-cl1 trans-04 js-hide-sidebar">
+						<i class="zmdi zmdi-close"></i>
+					</div>
+				</div>
+
+				<div class="sidebar-content flex-w w-full p-lr-65 js-pscroll">
+					<ul class="sidebar-link w-full">
+						<li class="p-b-13">
+							<a href="index.html" class="stext-102 cl2 hov-cl1 trans-04">
+								Home
+							</a>
+						</li>
+
+						<li class="p-b-13">
+							<a href="#" class="stext-102 cl2 hov-cl1 trans-04">
+								My Wishlist
+							</a>
+						</li>
+
+						<li class="p-b-13">
+							<a href="#" class="stext-102 cl2 hov-cl1 trans-04">
+								My Account
+							</a>
+						</li>
+
+						<li class="p-b-13">
+							<a href="#" class="stext-102 cl2 hov-cl1 trans-04">
+								Track Oder
+							</a>
+						</li>
+
+						<li class="p-b-13">
+							<a href="#" class="stext-102 cl2 hov-cl1 trans-04">
+								Refunds
+							</a>
+						</li>
+
+						<li class="p-b-13">
+							<a href="#" class="stext-102 cl2 hov-cl1 trans-04">
+								Help & FAQs
+							</a>
+						</li>
+					</ul>
+
+					<div class="sidebar-gallery w-full p-tb-30">
+						<span class="mtext-101 cl5">
+							@ Alzerina Fashion
+						</span>
+
+						<div class="flex-w flex-sb p-t-36 gallery-lb">
+							<!-- item gallery sidebar -->
+							<div class="wrap-item-gallery m-b-10">
+								<a class="item-gallery bg-img1" href="images/gallery-01.jpg" data-lightbox="gallery"
+								style="background-image: url('images/gallery-01.jpg');"></a>
+							</div>
+
+							<!-- item gallery sidebar -->
+							<div class="wrap-item-gallery m-b-10">
+								<a class="item-gallery bg-img1" href="images/gallery-02.jpg" data-lightbox="gallery"
+								style="background-image: url('images/gallery-02.jpg');"></a>
+							</div>
+
+							<!-- item gallery sidebar -->
+							<div class="wrap-item-gallery m-b-10">
+								<a class="item-gallery bg-img1" href="images/gallery-03.jpg" data-lightbox="gallery"
+								style="background-image: url('images/gallery-03.jpg');"></a>
+							</div>
+
+							<!-- item gallery sidebar -->
+							<div class="wrap-item-gallery m-b-10">
+								<a class="item-gallery bg-img1" href="images/gallery-04.jpg" data-lightbox="gallery"
+								style="background-image: url('images/gallery-04.jpg');"></a>
+							</div>
+
+							<!-- item gallery sidebar -->
+							<div class="wrap-item-gallery m-b-10">
+								<a class="item-gallery bg-img1" href="images/gallery-05.jpg" data-lightbox="gallery"
+								style="background-image: url('images/gallery-05.jpg');"></a>
+							</div>
+
+							<!-- item gallery sidebar -->
+							<div class="wrap-item-gallery m-b-10">
+								<a class="item-gallery bg-img1" href="images/gallery-06.jpg" data-lightbox="gallery"
+								style="background-image: url('images/gallery-06.jpg');"></a>
+							</div>
+
+							<!-- item gallery sidebar -->
+							<div class="wrap-item-gallery m-b-10">
+								<a class="item-gallery bg-img1" href="images/gallery-07.jpg" data-lightbox="gallery"
+								style="background-image: url('images/gallery-07.jpg');"></a>
+							</div>
+
+							<!-- item gallery sidebar -->
+							<div class="wrap-item-gallery m-b-10">
+								<a class="item-gallery bg-img1" href="images/gallery-08.jpg" data-lightbox="gallery"
+								style="background-image: url('images/gallery-08.jpg');"></a>
+							</div>
+
+							<!-- item gallery sidebar -->
+							<div class="wrap-item-gallery m-b-10">
+								<a class="item-gallery bg-img1" href="images/gallery-09.jpg" data-lightbox="gallery"
+								style="background-image: url('images/gallery-09.jpg');"></a>
+							</div>
+						</div>
+					</div>
+
+					<div class="sidebar-gallery w-full">
+						<span class="mtext-101 cl5">
+							About Us
+						</span>
+
+						<p class="stext-108 cl6 p-t-27">
+							Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur maximus vulputate hendrerit. Praesent faucibus erat vitae rutrum gravida. Vestibulum tempus mi enim, in molestie sem fermentum quis.
+						</p>
+					</div>
+				</div>
+			</div>
+		</aside>
 	</header>
 
 
 	<!-- Sidebar -->
-	<aside class="wrap-sidebar js-sidebar">
-		<div class="s-full js-hide-sidebar"></div>
 
-		<div class="sidebar flex-col-l p-t-22 p-b-25">
-			<div class="flex-r w-full p-b-30 p-r-27">
-				<div class="fs-35 lh-10 cl2 p-lr-5 pointer hov-cl1 trans-04 js-hide-sidebar">
-					<i class="zmdi zmdi-close"></i>
-				</div>
-			</div>
-
-			<div class="sidebar-content flex-w w-full p-lr-65 js-pscroll">
-				<ul class="sidebar-link w-full">
-					<li class="p-b-13">
-						<a href="index.html" class="stext-102 cl2 hov-cl1 trans-04">
-							Home
-						</a>
-					</li>
-
-					<li class="p-b-13">
-						<a href="#" class="stext-102 cl2 hov-cl1 trans-04">
-							My Wishlist
-						</a>
-					</li>
-
-					<li class="p-b-13">
-						<a href="#" class="stext-102 cl2 hov-cl1 trans-04">
-							My Account
-						</a>
-					</li>
-
-					<li class="p-b-13">
-						<a href="#" class="stext-102 cl2 hov-cl1 trans-04">
-							Track Oder
-						</a>
-					</li>
-
-					<li class="p-b-13">
-						<a href="#" class="stext-102 cl2 hov-cl1 trans-04">
-							Refunds
-						</a>
-					</li>
-
-					<li class="p-b-13">
-						<a href="#" class="stext-102 cl2 hov-cl1 trans-04">
-							Help & FAQs
-						</a>
-					</li>
-				</ul>
-
-				<div class="sidebar-gallery w-full p-tb-30">
-					<span class="mtext-101 cl5">
-						@ Alzerina Fashion
-					</span>
-
-					<div class="flex-w flex-sb p-t-36 gallery-lb">
-						<!-- item gallery sidebar -->
-						<div class="wrap-item-gallery m-b-10">
-							<a class="item-gallery bg-img1" href="images/gallery-01.jpg" data-lightbox="gallery"
-							style="background-image: url('images/gallery-01.jpg');"></a>
-						</div>
-
-						<!-- item gallery sidebar -->
-						<div class="wrap-item-gallery m-b-10">
-							<a class="item-gallery bg-img1" href="images/gallery-02.jpg" data-lightbox="gallery"
-							style="background-image: url('images/gallery-02.jpg');"></a>
-						</div>
-
-						<!-- item gallery sidebar -->
-						<div class="wrap-item-gallery m-b-10">
-							<a class="item-gallery bg-img1" href="images/gallery-03.jpg" data-lightbox="gallery"
-							style="background-image: url('images/gallery-03.jpg');"></a>
-						</div>
-
-						<!-- item gallery sidebar -->
-						<div class="wrap-item-gallery m-b-10">
-							<a class="item-gallery bg-img1" href="images/gallery-04.jpg" data-lightbox="gallery"
-							style="background-image: url('images/gallery-04.jpg');"></a>
-						</div>
-
-						<!-- item gallery sidebar -->
-						<div class="wrap-item-gallery m-b-10">
-							<a class="item-gallery bg-img1" href="images/gallery-05.jpg" data-lightbox="gallery"
-							style="background-image: url('images/gallery-05.jpg');"></a>
-						</div>
-
-						<!-- item gallery sidebar -->
-						<div class="wrap-item-gallery m-b-10">
-							<a class="item-gallery bg-img1" href="images/gallery-06.jpg" data-lightbox="gallery"
-							style="background-image: url('images/gallery-06.jpg');"></a>
-						</div>
-
-						<!-- item gallery sidebar -->
-						<div class="wrap-item-gallery m-b-10">
-							<a class="item-gallery bg-img1" href="images/gallery-07.jpg" data-lightbox="gallery"
-							style="background-image: url('images/gallery-07.jpg');"></a>
-						</div>
-
-						<!-- item gallery sidebar -->
-						<div class="wrap-item-gallery m-b-10">
-							<a class="item-gallery bg-img1" href="images/gallery-08.jpg" data-lightbox="gallery"
-							style="background-image: url('images/gallery-08.jpg');"></a>
-						</div>
-
-						<!-- item gallery sidebar -->
-						<div class="wrap-item-gallery m-b-10">
-							<a class="item-gallery bg-img1" href="images/gallery-09.jpg" data-lightbox="gallery"
-							style="background-image: url('images/gallery-09.jpg');"></a>
-						</div>
-					</div>
-				</div>
-
-				<div class="sidebar-gallery w-full">
-					<span class="mtext-101 cl5">
-						About Us
-					</span>
-
-					<p class="stext-108 cl6 p-t-27">
-						Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur maximus vulputate hendrerit. Praesent faucibus erat vitae rutrum gravida. Vestibulum tempus mi enim, in molestie sem fermentum quis.
-					</p>
-				</div>
-			</div>
-		</div>
-	</aside>
 
 
 	<!-- Cart -->
@@ -1390,6 +1395,18 @@
 						<a href="https://www.pinterest.com/alzerinaJewelry/" class="fs-18 cl7 hov-cl1 trans-04 m-r-16">
 							<i class="fa fa-pinterest-p"></i>
 						</a>
+
+						<a href="https://www.instagram.com/alzerinajewelry/" class="fs-18 cl7 hov-cl1 trans-04 m-r-16">
+							<i class="fa fa-instagram-p"></i>
+						</a>
+
+						<a href="https://www.youtube.com/channel/UCIUAByfRp-6FPh6mDBjxZ9g" class="fs-18 cl7 hov-cl1 trans-04 m-r-16">
+							<i class="fa fa-youtube-p"></i>
+						</a>
+
+						<a href="http://alzerinablog.com/" class="fs-18 cl7 hov-cl1 trans-04 m-r-16">
+							<i class="fa fa-Blog-p"></i>
+						</a>
 					</div>
 				</div>
 
@@ -1438,7 +1455,7 @@
 
 				<p class="stext-107 cl6 txt-center">
 					<!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved by Alzerinafashion.com</i> 
+Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved by Alzerinafashion.com</i>
 <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
 
 				</p>
