--- a/index.html
+++ b/index.html
@@ -50,9 +50,11 @@
 				<nav class="limiter-menu-desktop p-l-45">
 
 					<!-- Logo desktop -->
+					<div class="logo-container1">
 					<a href="#" class="logo">
-						<img src="images/icons/logo-01.png" alt="IMG-LOGO">
+						<img src="images/icons/logo-01.png" class="image1" alt="IMG-LOGO">
 					</a>
+				</div>
 					<!-- Menu desktop -->
 					<div class="menu-desktop">
 						<ul class="main-menu">
